Milestone 1: Fix docs, Gemini model selection, consolidate keychain, extract constants
- Update line counts and test count (237) in ARCHITECTURE.md and README.md
- Add model parameter to ask_gemini() and pass model_id in audit runner
- Consolidate 6 keychain helpers into shared _load_keychain/_save_keychain
- Extract MAX_EVENT_TEXT and MAX_SKILLS as module-level constants in wslog.py
- Enrich all 10 domain skills with deeper WAS troubleshooting knowledge
- Add gen_logs.sh for realtime log testing
- Regenerate audit report with updated findings

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>