@@ -104,3 +104,91 @@ Enable with:
 ```
 
 When analyzing JSON logs, parse the `loglevel` and `module` fields for filtering.
+
+## MicroProfile Reactive Messaging
+
+### Message Processing Failures
+```
+CWMRX1100E: Reactive messaging channel <name> encountered an error
+CWMRX0101W: Message acknowledgement failed on channel <name>
+```
+Causes:
+- Message deserialization failure (wrong schema/format)
+- Downstream consumer not available (Kafka broker down)
+- Processing method threw an exception
+
+### Kafka Connector Errors
+```
+CWMRX1003E: Kafka connection failed for channel <name>
+```
+Check:
+- Kafka broker connectivity (bootstrap.servers config)
+- Topic existence and ACLs
+- SSL/SASL config if using secure Kafka
+
+## MicroProfile Metrics Failures
+
+```
+CWMMC0007E: Metrics endpoint error
+CWMMC0013W: Metric registration failed
+```
+Usually non-critical but indicates monitoring gaps:
+- Duplicate metric names across applications
+- Unsupported metric type for the registry
+- Metrics endpoint blocked by security config
+
+## OSGi Bundle Resolution Errors
+
+Liberty is built on OSGi. Bundle errors surface as:
+```
+CWWKE0702E: Could not resolve module: <bundle> [id]
+  Unresolved requirement: Import-Package: com.ibm.ws.something; version="[1.0,2.0)"
+```
+This differs from app ClassNotFoundException:
+- **App ClassNotFoundException**: missing JAR in WEB-INF/lib
+- **OSGi resolution error**: Liberty runtime feature conflict or missing feature
+
+Fix: Add the required feature to `server.xml` or resolve version conflicts.
+
+## Liberty on Non-Default JDKs
+
+### Eclipse Temurin / AdoptOpenJDK
+- Thread dump format differs slightly (no `1CIJAVAVERSION` section)
+- GC log format: use `-Xlog:gc*` (not `-verbose:gc`)
+- Crypto providers may differ (affects SSL initialization)
+
+### Java 17+ Considerations
+```
+WARNING: A restricted reflective access operation has occurred
+WARNING: --add-opens may be required
+```
+Liberty on Java 17+ needs JVM args for reflection access:
+```
+-XX:+IgnoreUnrecognizedVMOptions
+--add-opens=java.base/java.lang=ALL-UNNAMED
+```
+These warnings are noisy but important — if the access is blocked (not just warned), features break silently.
+
+## Graceful Shutdown Patterns
+
+Normal shutdown:
+```
+CWWKE1100I: Quiescing server
+CWWKZ0009I: Application <name> stopped
+CWWKE0036I: Server stopped after X seconds
+```
+
+Forced/ungraceful shutdown:
+- No CWWKE1100I before CWWKE0001I (restart without shutdown)
+- CWWKE0036I missing → process was killed (kill -9)
+- Active requests interrupted → check for partial transactions (WTRN0062E)
+
+## Incident Response Playbook
+
+### Scenario: Liberty Server Not Responding
+1. Check if CWWKF0011I ("ready to run") ever appeared → if not, startup failed
+2. If running, take thread dump: `server javadump <name>`
+3. Check health endpoint: `/health/ready` → if DOWN, check which health check failed
+4. Check metrics endpoint: `/metrics` → look for active request count
+5. If no response at all → check if process is alive (`ps aux | grep liberty`)
+6. Check messages.log (not SystemOut.log) — Liberty logs there by default
